# InkyGallery

./: .gitignore  README.md  pyproject.toml  run.py
deploy/nginx/: inkygallery.conf
deploy/systemd/: inkygallery.service
docs/: backend-image-library-spec.md  ui-designer-spec.md  ui-refactor-implementation-plan.md
inky-gallery-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
inky-gallery-ui/public/: sw.js
inky-gallery-ui/scripts/: capture-mobile-screenshots.mjs  capture-readme-screenshots.mjs  docs-screenshot-helpers.mjs  generate-pwa-icons.py  verify-ui-flows.mjs
inky-gallery-ui/src/: App.tsx  index.css  main.tsx
inky-gallery-ui/src/components/: CropEditorDialog.tsx  Library.tsx  NowPlaying.tsx  QueueView.tsx  SettingsView.tsx
inky-gallery-ui/src/data/: mock.ts  types.ts
inky-gallery-ui/src/hooks/: useActionState.ts  useAssetActions.ts  useBootstrap.ts  usePlaybackActions.ts  usePlaybackPolling.ts  useQueueActions.ts  useSettingsActions.ts  useTheme.ts
inky-gallery-ui/src/lib/: api.ts  app-defaults.ts  crop.ts  error.ts  playback-state.ts  (+3 more)
src/: app.py
src/api/: assets.py  device.py  openapi.py  playback.py  queue.py
src/config/: device_defaults.py
src/display/: display_manager.py  inky_display.py
src/repositories/: assets_repo.py  playback_repo.py  queue_repo.py
src/services/: asset_service.py  device_settings_service.py  display_service.py  playback_controller.py  queue_service.py
src/storage/: database.py  media_store.py  schema.sql
src/utils/: image_loader.py  paths.py  timestamps.py
tests/: conftest.py  test_api.py
(+49 files in other folders)
